Fix action link vertical alignment on mobile

--- a/app/assets/stylesheets/govuk_publishing_components/components/_action-link.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_action-link.scss
@@ -20,6 +20,11 @@
   }
 }
 
+.gem-c-action-link__contents-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 .gem-c-action-link__link-wrapper {
   @include govuk-font(19, $weight: bold, $line-height: 1.3);
   display: table-cell;
